# path-tracer-cpp

./: .gitignore  :w  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.cache/clangd/index/: add_mat.cu.399BF57C3CEBD708.idx  add_mat.cu.F2521BB4E3179DB3.idx  add_matrix.cu.DB1DC9FEB0E99065.idx  add_vec.cu.28B20E2640B815D8.idx  add_vec.cu.57BBD3B4585D8F60.idx  add_vec.cu.B610493FA2569B8E.idx  address.hpp.4FC927C003D92DEE.idx  address.hpp.65FD78AD40232B24.idx  address.hpp.811ACF284EE17144.idx  address.hpp.C383BB91A431307D.idx  address.ipp.6ABFEEBB7CFE83E0.idx  address.ipp.A76048A5FDFCECF0.idx  address_v4.hpp.09DEFB41C5BD0539.idx  address_v4.hpp.AE03BBE9E5943CB3.idx  address_v4.hpp.EC11B0269B33F380.idx  address_v4.hpp.FBC2E65C22BC4AAD.idx  address_v4.ipp.3044D3070FECA717.idx  address_v4.ipp.7F5C12C189E0DD61.idx  address_v4_iterator.hpp.086D94CAE3C84CB8.idx  address_v4_iterator.hpp.B608CF9B2B82A815.idx  address_v4_range.hpp.E0CC03FDB682B1E6.idx  address_v4_range.hpp.F1A78B79E81F6585.idx  address_v6.hpp.7CACEF96C6D1B99B.idx  address_v6.hpp.81B4FBC00B191361.idx  address_v6.hpp.DC4CBAECE9E6E451.idx  address_v6.hpp.F20C9C18585142DC.idx  address_v6.ipp.0CE8B52965F5F31E.idx  address_v6.ipp.9ADB961481AAD5CF.idx  address_v6_iterator.hpp.1AE8E000BE6D30F4.idx  address_v6_iterator.hpp.A3D54F5890D63D01.idx  (+966 more)
lib/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/mat/: README.md
lib/matrix/: CMakeLists.txt
lib/test_lib/: CMakeLists.txt
lib/vec3/: CMakeLists.txt
lib/vec3/src/: vec3.cpp
src/: .asio_receive_test.txt  .asio_send_test.txt  CMakeLists.txt  README.md  main.cpp
src/bvh-builder/: CMakeLists.txt
src/http-server/: CMakeLists.txt  README.md  controller.cpp
src/path-tracer/: CMakeLists.txt  README.md  main.cpp
src/udp-server/: CMakeLists.txt  README.md
(+33 files in other folders)
